crates/models/src/validation/tests/snapshots/models__validation__tests__invalid_initial_register.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-halve#/collections/testing~1int-halve/derivation,
        error: derivation's initial register is invalid against its schema: {
          "document": "should be an integer",
          "basic_output": {
            "errors": [
              {
                "absoluteKeywordLocation": "test://int-halve?ptr=/collections/testing~1int-halve/derivation/register/schema",
                "error": "Invalid(Type(\"integer\"))",
                "instanceLocation": "",
                "keywordLocation": "#"
              }
            ],
            "valid": false
          }
        },
    },
]
