crates/models/src/validation/tests/snapshots/models__validation__tests__invalid_partition_names_and_duplicates.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-string#/collections/testing~1int-string/projections/bIt,
        error: projection bIt has a duplicated definition at test://int-string#/collections/testing~1int-string/projections/bit,
    },
    Error {
        scope: test://int-string#/collections/testing~1int-string/projections/INT,
        error: projection INT has a duplicated definition at test://int-string#/collections/testing~1int-string/projections/Int,
    },
    Error {
        scope: test://int-string#/collections/testing~1int-string/projections/,
        error: partition name cannot be empty,
    },
    Error {
        scope: test://int-string#/collections/testing~1int-string/projections/inv%20alid,
        error: inv alid cannot be used as name for partition (" alid" is invalid),
    },
    Error {
        scope: test://int-string#/collections/testing~1int-string/projections/inv!alid,
        error: inv!alid cannot be used as name for partition ("!alid" is invalid),
    },
    Error {
        scope: test://int-string#/collections/testing~1int-string/projections/inv~1alid,
        error: inv/alid cannot be used as name for partition ("/alid" is invalid),
    },
    Error {
        scope: test://int-string#/collections/testing~1int-string/projections/str,
        error: projection str is the canonical field name of location /str, and cannot re-map it to /int,
    },
]
