crates/models/src/validation/tests/snapshots/models__validation__tests__invalid_transform_names_and_duplicates.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-reverse#/collections/testing~1int-reverse/derivation/transform/,
        error: transform name cannot be empty,
    },
    Error {
        scope: test://int-reverse#/collections/testing~1int-reverse/derivation/transform/inv%20alid,
        error: inv alid cannot be used as name for transform (" alid" is invalid),
    },
    Error {
        scope: test://int-reverse#/collections/testing~1int-reverse/derivation/transform/inv!alid,
        error: inv!alid cannot be used as name for transform ("!alid" is invalid),
    },
    Error {
        scope: test://int-reverse#/collections/testing~1int-reverse/derivation/transform/inv~1alid,
        error: inv/alid cannot be used as name for transform ("/alid" is invalid),
    },
    Error {
        scope: test://int-reverse#/collections/testing~1int-reverse/derivation/transform/reVeRsEIntString,
        error: transform reVeRsEIntString has a duplicated definition at test://int-reverse#/collections/testing~1int-reverse/derivation/transform/reverseIntString,
    },
]
