crates/models/src/validation/tests/snapshots/models__validation__tests__keyed_location_wrong_type.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-reverse#/collections/testing~1int-reverse,
        error: location /int accepts "number", "object" in schema test://int-string.schema, but "fractional", "object" is disallowed in locations used as keys,
    },
    Error {
        scope: test://int-string#/collections/testing~1int-string,
        error: location /int accepts "number", "object" in schema test://int-string.schema, but "fractional", "object" is disallowed in locations used as keys,
    },
    Error {
        scope: test://int-halve#/collections/testing~1int-halve,
        error: location /int accepts "number", "object" in schema test://int-string-len.schema, but "fractional", "object" is disallowed in locations used as keys,
    },
    Error {
        scope: test://int-reverse#/collections/testing~1int-reverse/derivation/transform/reverseIntString,
        error: location /int accepts "number", "object" in schema test://int-string.schema, but "fractional", "object" is disallowed in locations used as keys,
    },
    Error {
        scope: test://int-halve#/collections/testing~1int-halve/derivation/transform/halveIntString,
        error: location /int accepts "number", "object" in schema test://int-string-len.schema, but "fractional", "object" is disallowed in locations used as keys,
    },
    Error {
        scope: test://int-halve#/collections/testing~1int-halve/derivation/transform/halveSelf,
        error: location /int accepts "number", "object" in schema test://int-string-len.schema, but "fractional", "object" is disallowed in locations used as keys,
    },
]
