crates/models/src/validation/tests/snapshots/models__validation__tests__materialization_driver_returns_error.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-string-materialization#/materializations/testing~1int-string,
        error: driver error while validating materialization testing/int-string
        
        Caused by:
            A driver error!,
    },
]
