crates/models/src/validation/tests/snapshots/models__validation__tests__materialization_driver_unknown_constraint.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-string-materialization#/materializations/testing~1int-string,
        error: driver error while validating materialization testing/int-string
        
        Caused by:
            unknown constraint type 99,
    },
    Error {
        scope: test://int-string-materialization#/materializations/testing~1int-string,
        error: materialization testing/int-string field str is not satisfiable (selector includes field, but driver forbids it with reason reason: whoops),
    },
]
