crates/models/src/validation/tests/snapshots/models__validation__tests__materialization_endpoint_not_found.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-string-materialization#/materializations/testing~1int-string,
        error: endpoint MaterializeEndpoit, referenced by materialization testing/int-string, is not defined; did you mean materializeEndpoint defined at test://root#/endpoints/materializeEndpoint?,
    },
    Error {
        scope: test://int-halve-materialization#/materializations/testing~1int-halve,
        error: endpoint wildlyOffName, referenced by materialization testing/int-halve, is not defined,
    },
]
