crates/models/src/validation/tests/snapshots/models__validation__tests__materialization_field_errors.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-halve-materialization#/materializations/testing~1int-halve,
        error: include projection biT does not exist in collection testing/int-halve,
    },
    Error {
        scope: test://int-halve-materialization#/materializations/testing~1int-halve,
        error: exclude projection BiTT does not exist in collection testing/int-halve,
    },
    Error {
        scope: test://int-halve-materialization#/materializations/testing~1int-halve,
        error: exclude projection WildlyOffName does not exist in collection testing/int-halve,
    },
    Error {
        scope: test://int-halve-materialization#/materializations/testing~1int-halve,
        error: materialization testing/int-halve field int is not satisfiable (field is both included and excluded by selector),
    },
]
