crates/models/src/validation/tests/snapshots/models__validation__tests__must_have_update_or_publish.snap
---
source: crates/models/src/validation/tests/mod.rs
expression: tables.errors
---
[
    Error {
        scope: test://int-reverse#/collections/testing~1int-reverse/derivation/transform/reverseIntString,
        error: must set at least one of 'update' or 'publish' lambdas,
    },
]
